--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/formulario-triagem.component.css
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/formulario-triagem.component.css
@@ -5,9 +5,39 @@
 
 .p-float-label {
     margin: 5px;
-    display: inline-block;
 }
 
 .radioBtn {
     margin-right: 5px;
+}
+
+.text-form {
+    font-size: 14px;
+    color: #40556B;
+}
+
+.margin-m {
+    margin-top: 9.75px;
+}
+
+.cancelar {
+    background: #D4DDE5;
+    box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24);
+    border-radius: 4px;
+    color: #ffffff;  
+    padding: 0.643rem 0.75rem;
+    font-size: 1rem;
+    transition: background-color 0.2s, border-color 0.2s, color 0.2s, box-shadow 0.2s, background-size 0.2s cubic-bezier(0.64, 0.09, 0.08, 1);
+    border-radius: 4px;
+    width: 208px;
+    height: 42px;
+    display: inline;
+    margin-left: 10px;
+    margin-top: 5px;
+
+}
+
+.cancelar:hover {
+    background: rgba(2, 103, 176, 1);
+    color: #ffffff;
 }
