--- a/frontend/src/app/pacientes/formulario/paciente-list.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-list.component.html
@@ -2,17 +2,65 @@
 
 <div class="card">
     <div nForm [formGroup]="paciente">
-        <div class="p-grid p-fluid p-mb-5">
-            <div nInputText label="Nome paciente" formControlName="nome" class="p-col-12" style="width: 35%"></div>
-            <div nInputText label="Prontuario paciente" formControlName="prontuario" class="p-col-12" style="width: 35%"></div>
+        <div class="p-md-12 p-d-inline">
+            <div class="p-md-6" style="display: flex; width: 100%;">
+                <span class="p-float-label" style="margin-top: 6px; margin-right: 6px; width: 100%;">
+                    <input type="text" pInputText class="ui-inputtext" name="filtro"
+                        [(ngModel)]="elasticQuery.value" />
+                    <label>Nome paciente</label>
+                </span>
+                <span class="p-float-label" style="margin-top: 6px; margin-right: 6px; width: 100%;">
+                    <input type="text" pInputText class="ui-inputtext" name="filtro"
+                        [(ngModel)]="elasticQuery.value" />
+                    <label>Prontuario paciente</label>
+                </span>
+                <div class="button-margin">
+                    <button pButton type="submit" label="Pesquisar" icon="ui-icon-search"
+                        bTooltip="Pesquisar paciente por nome." (click)="pesquisar()"></button>
+                </div>
+                <div class="button-margin">
+                    <button pButton type="button" style="background: #009370;" label="Novo Paciente" icon="ui-icon-add"
+                        routerLink="../save" bTooltip="Cadastrar novo Paciente."></button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
 <div class="card">
+    <div class="p-md-12">
+        <ul class="itens-paciente-list">
+            <li class="item-paciente-list">
+                <a><img src="../../../assets/layout/images/icon-lixo.png"></a>
+            </li>
+            <li class="item-paciente-list">
+                <a><img src="../../../assets/layout/images/icon-download.png"></a>
+            </li>
+            <li class="item-paciente-list" style="cursor: none;">
+                <a><img src="../../../assets/layout/images/icon-separador.png"></a>
+            </li>
+            <li class="item-paciente-list">
+                <a><img src="../../../assets/layout/images/icon-densidade-baixa.png"></a>
+            </li>
+            <li class="item-paciente-list">
+                <a><img src="../../../assets/layout/images/icon-densidade-alta.png"></a>
+            </li>
+            <li class="item-paciente-list">
+                <a><img src="../../../assets/layout/images/icon-selecionar-colunas.png"></a>
+            </li>
+            <li class="item-paciente-list" style="cursor: none;">
+                <a><img src="../../../assets/layout/images/icon-separador.png"></a>
+            </li>
+            <li class="item-paciente-list">
+                <a><img src="../../../assets/layout/images/icon-filtro-coluna.png"></a>
+            </li>
+            <li class="item-paciente-list">
+                <a><img src="../../../assets/layout/images/icon-procurar.png"></a>
+            </li>
+        </ul>
+    </div>
     <nCrudList [form]="paciente" [datatableParams]="datatableParams">
-        <p-column header="Prontuário" icon="" field="prontuario">
-        </p-column>
+        <p-column header="Prontuário" icon="" field="prontuario"></p-column>
             <p-column header="Nome" field="nome"></p-column>
             <p-column header="Nome da Mãe" field="genitores">
                 <ng-template let-data="rowData" pTemplate="body">
