--- a/frontend/src/app/pacientes/formulario/paciente-list.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-list.component.html
@@ -31,31 +31,45 @@
     <div class="p-md-12">
         <ul class="itens-paciente-list">
             <li class="item-paciente-list">
-                <a><img src="../../../assets/layout/images/icon-lixo.png"></a>
+                <button class="icon-barra" pTooltip="Lixo" tooltipPosition="top">
+                    <img src="../../../assets/layout/images/icon-lixo.png">
+                </button>
             </li>
             <li class="item-paciente-list">
-                <a><img src="../../../assets/layout/images/icon-download.png"></a>
+                <button class="icon-barra" pTooltip="Download" tooltipPosition="top">
+                   <img src="../../../assets/layout/images/icon-download.png"> 
+                </button>
             </li>
-            <li class="item-paciente-list" style="cursor: none;">
+            <li class="item-paciente-list">
                 <a><img src="../../../assets/layout/images/icon-separador.png"></a>
             </li>
             <li class="item-paciente-list">
-                <a><img src="../../../assets/layout/images/icon-densidade-baixa.png"></a>
+                <button class="icon-barra" pTooltip="" tooltipPosition="top">
+                    <img src="../../../assets/layout/images/icon-densidade-baixa.png">
+                </button>
             </li>
             <li class="item-paciente-list">
-                <a><img src="../../../assets/layout/images/icon-densidade-alta.png"></a>
+                <button class="icon-barra" pTooltip="" tooltipPosition="top">
+                    <img src="../../../assets/layout/images/icon-densidade-alta.png">
+                </button>
             </li>
             <li class="item-paciente-list">
-                <a><img src="../../../assets/layout/images/icon-selecionar-colunas.png"></a>
+                <button class="icon-barra" pTooltip="Selecionar Colunas" tooltipPosition="top">
+                    <img src="../../../assets/layout/images/icon-selecionar-colunas.png">
+                </button>
             </li>
-            <li class="item-paciente-list" style="cursor: none;">
+            <li class="item-paciente-list">
                 <a><img src="../../../assets/layout/images/icon-separador.png"></a>
             </li>
             <li class="item-paciente-list">
-                <a><img src="../../../assets/layout/images/icon-filtro-coluna.png"></a>
+                <button class="icon-barra" pTooltip="Filtrar por Coluna" tooltipPosition="top">
+                    <img src="../../../assets/layout/images/icon-filtro-coluna.png">
+                </button>
             </li>
             <li class="item-paciente-list">
-                <a><img src="../../../assets/layout/images/icon-procurar.png"></a>
+                <button class="icon-barra" pTooltip="Pesquisar Paciente" tooltipPosition="top">
+                    <img src="../../../assets/layout/images/icon-procurar.png">
+                </button>
             </li>
         </ul>
     </div>
