--- a/frontend/src/app/pacientes/formulario/paciente-form.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-form.component.html
@@ -1,3 +1,11 @@
+
+
+<p-tabMenu [model]="items">
+    
+</p-tabMenu>
+<!--  -->
+
+
 <nCrudForm [form]="paciente" >
     <div class="p-col-12 p-grid">
         <p-accordion>
