--- a/frontend/src/app/pacientes/formulario/paciente-list.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-list.component.html
@@ -71,46 +71,37 @@
             </li>
         </ul>
     </div>
-   <!-- <basis-datatable [url]="searchUrl" [showPaginationFooter]="true" [rowsPerPageOptions]="rowsPerPageOptions"
-        (buttonClick)="onClick($event)">
-        <p-column header="Nome do Paciente" field="paciente.nome">
-            <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
-                {{ triagem?.paciente?.nome === undefined ? "" : triagem?.paciente?.nome}}
+    <!-- <basis-datatable disableEdit="disabled" disableView="disabled" disableDelete="disabled" [url]="searchUrl" [showPaginationFooter]="true" [rowsPerPageOptions]="rowsPerPageOptions">
+        <p-column header="Prontuario" field="paciente.prontuario">
+            <ng-template let-col="col" let-data="rowData" pTemplate="body">
+                {{paciente?.prontuario === undefined ? "" : paciente?.prontuario}}
             </ng-template>
         </p-column>
-        <p-column header="Nome Social" field="paciente.nomeSocial">
-            <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
-                {{ triagem?.paciente?.nomeSocial === undefined ? "" : triagem?.paciente?.nomeSocial }}
+        <p-column header="Nome" field="paciente.nome">
+            <ng-template let-col="col" let-data="rowData" pTemplate="body">
+                {{ paciente?.nome === undefined ? "" : paciente?.nome }}
             </ng-template>
         </p-column>
         <p-column header="Nome da Mãe" field="paciente.genitores.nomeDaMae">
-            <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
-                {{ triagem?.paciente?.genitores?.nomeDaMae === undefined ? "" :
-                triagem?.paciente?.genitores?.nomeDaMae}}
+            <ng-template let-col="col" let-data="rowData" pTemplate="body">
+                {{ paciente?.genitores?.nomeDaMae === undefined ? "" : paciente?.genitores?.nomeDaMae}}
             </ng-template>
         </p-column>
-        <p-column header="Data/Hora da Chegada" field="dataHoraDoAtendimento">
-            <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
-                {{ triagem?.dataHoraDoAtendimento | date: 'dd/MM/yyyy - HH:mm' }}
+        <p-column header="Data de Nascimento" field="paciente.dataDeNascimento">
+            <ng-template let-col="col" let-data="rowData" pTemplate="body">
+                {{ paciente?.dataDeNascimento | date: 'dd/MM/yyyy' }}
             </ng-template>
         </p-column>
-        <p-column header="Classificação" field="classificacaoDeRisco">
-            <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
-                <span>
-                    <div [ngClass]="{
-                                    emergencia: triagem[col.field] == 'EMERGENCIA',
-                                    muitoUrgente: triagem[col.field] == 'MUITO_URGENTE',
-                                    urgente: triagem[col.field] == 'URGENTE',
-                                    poucoUrgente: triagem[col.field] == 'POUCO_URGENTE',
-                                    naoUrgente: triagem[col.field] == 'NAO_URGENTE'
-                                }" [pTooltip]="triagem[col.field]"></div>
-                </span>
+        <p-column header="Nº Cartão SUS" field="paciente.cartaoSUS">
+            <ng-template let-col="col" let-data="rowData" pTemplate="body">
+               {{ paciente?.cartaoSUS === undefined ? "" : paciente?.cartaoSUS }}
             </ng-template>
         </p-column>
         <p-column header="Ações" field="acoes">
 
         </p-column>
-    </basis-datatable>-->
+    </basis-datatable> -->
+
     <nCrudList [disableSave]="true" [form]="paciente" [datatableParams]="datatableParams">
         <p-column header="Prontuário" icon="" field="prontuario"></p-column>
         <p-column header="Nome" field="nome"></p-column>
@@ -127,4 +118,6 @@
         </p-column>
         <p-column header="Ações" field=""></p-column>
     </nCrudList>
+    
+    
 </div>
